[package]
name = "error-code-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"


[lib]
proc-macro = true

[dependencies]
darling = "0.20.8"
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = { version = "2.0.63", features = ["extra-traits"] }

[dev-dependencies]
anyhow = { worksapce = true }
error-code = { workspace = true }
thiserror = { workspace = true }
